--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: duious, Horrible Cop
+title: duious's blog
 ---
 <div class="blurb">
     <h1>Hi there, I'm duious!</h1>
-    <p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-</div><!-- /.blurb -->
+    <p>just so so</p>
+</div>
