--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: duious's blog
 ---
 <div class="blurb">
     <h1>Hi there, I'm duious!</h1>
-    <p>just so so</p>
+    <p>just so so.</p>
 </div>
