--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: duious's blog
 ---
-<div class="blurb">
+<div class=" ">
     <h1>Hi there, I'm duious!</h1>
     <p>just so so.</p>
 </div>
